# python-template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  codecov.yml  pyproject.toml  release-please-config.json
.github/: pull_request_template.md  release-please-config.json
.github/workflows/: ci.yml  deployment.yml  release.yml
docker/: Dockerfile
python_template/: main.py  output.py  processor.py  reader.py
python_template/data/: urls.py  user_data.py
tests/integration/: test_integration.py
tests/unit/: test_unit.py
